fix join completing with errors when a task has failed or some tasks are not terminal yet